--- a/index.html
+++ b/index.html
@@ -5,13 +5,55 @@
     <title>Game Library</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
   </head>
   <body>
-
     <h1>Game Library</h1>
+    <form class="form-horizontal" role="form" form id='myForm'>
+      <div class="form-group">
+        <label class="control-label col-sm-2">TITLE:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id='title' placeholder="Enter title of game" required>
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-2">GENRE:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="genre" placeholder="Enter genre of game">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <button type="submit" class="btn btn-default">Submit</button>
+        </div>
+      </div>
+      <div class="col-sm-10">
+        <select class="form-control" id="dropDown">
+          <option value="" disabled selected>Select a Game Library Genre</option>
+          <option>All Games</option>
+        </select>
+      </div>
+    </form>
 
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
-  </body>
-</html>
+    <table class= 'table table-bordered'>
+      <thead>
+        <tr>
+          <th>
+            <b>TITLE</b>
+          </th>
+          <th>
+            <b>GENRE</b>
+          </th>
+        </tr>
+      </thed>
+        </thead>
+      <tbody>
+      </tbody>
+    </table>
+
+      <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+      <script type="text/javascript" src="js/main.js"></script>
+      <script></script>
+    </body>
+  </html>
