--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
   </head>
+
   <body>
     <h1>Game Library</h1>
+
     <form class="form-horizontal" role="form" form id='myForm'>
       <div class="form-group">
         <label class="control-label col-sm-2">TITLE:</label>
@@ -24,7 +26,7 @@
       </div>
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-default">Add to library</button>
         </div>
       </div>
       <div class="col-sm-10">
